--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 <section class="grid grid-cols-1 mt-16 border border-gray-200 rounded-lg shadow-sm md:mb-12 md:grid-cols-3 bg-white">
     <form class="flex flex-col col-span-2 justify-center px-8 md:px-16 py-16 md:ml-[5%] text-left bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
         <h2 class="mb-6 text-4xl font-semibold text-gray-900">Contact Me</h2>
-        <p class="mb-6 w-full md:w-5/6">I'm open to inquiries for employment opportunities or contract work. If you'd rather connect with me through LinkedIn or e-mail, those links can be found to the right of this form. Looking forward to hearing from you!</p>
+        <p class="hidden md:block mb-6 w-full md:w-5/6">I'm open to inquiries for employment opportunities or contract work. If you'd rather connect with me through LinkedIn or e-mail, those links can be found to the right of this form. Looking forward to hearing from you!</p>
+        <p class="md:hidden mb-6 w-full md:w-5/6">I'm open to inquiries for employment opportunities or contract work. If you'd rather connect with me through LinkedIn or e-mail, those links can be found below this form. Looking forward to hearing from you!</p>
         <div class="grid gap-6 mb-6 md:grid-cols-2">
             <div class="md:w-2/3">
                 <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
