--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="px-8 md:px-16 py-16 text-center md:text-left bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
         <h2 class="mx-[5%] text-4xl font-semibold text-gray-900">Skills</h2>
-        <div class="grid grid-cols-4 gap-y-4 mt-4 text-center justify-items-center">
+        <div class="grid grid-cols-4 sm:grid-cols-3 lg:grid-cols-4 gap-y-4 mt-4 text-center justify-items-center">
             <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML icon"/>HTML</p>
             <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS icon"/>CSS</p>
             <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript icon"/>JavaScript</p>
