Made GitHub links open in new tab

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"><span class="font-bold">Skills:</span> HTML, TypeScript, Tailwind, React, PostgreSQL, Next.js, Express, SCRUM</p>
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">This website is the capstone project for my Deep Dive Coding bootcamp. I'm working with 3 of my peers to build a fully functional web app. This app is meant to bring visibility to local New Mexico restaurants.</p>
                 <button class="w-32 text-[#82DAFF] hover:text-[#015A80] bg-[#7F0116] hover:bg-[#D44960] border-2 border-[#82DAFF] hover:border-[#015A80] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 text-center">
-                    <a href="https://github.com/team-eats/team-eats">GitHub Repo</a></button>
+                    <a href="https://github.com/team-eats/team-eats" target="_blank">GitHub Repo</a></button>
             </div>
         </div>
         <div class="max-w-md bg-white border border-gray-200 shadow dark:bg-gray-800 dark:border-gray-700">
@@ -84,7 +84,7 @@
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"><span class="font-bold">Skills:</span> HTML, JavaScript, Tailwind</p>
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">This website was my personal project for my Deep Dive Coding bootcamp. It provided an excellent learning experience and taught me a lot of basics about web development. I'm excited to add more functionality and projects to this page as I progress in my career.</p>
                 <button class="w-32 text-[#82DAFF] hover:text-[#015A80] bg-[#7F0116] hover:bg-[#D44960] border-2 border-[#82DAFF] hover:border-[#015A80] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 text-center">
-                    <a href="https://github.com/evanfbolton/evanfbolton-portfolio">GitHub Repo</a></button>
+                    <a href="https://github.com/evanfbolton/evanfbolton-portfolio" target="_blank">GitHub Repo</a></button>
             </div>
         </div>
         <div class="max-w-md bg-white border border-gray-200 shadow dark:bg-gray-800 dark:border-gray-700">
@@ -94,7 +94,7 @@
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"><span class="font-bold">Skills:</span> HTML, JavaScript, Tailwind</p>
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">In recent years, I've become a big fan of Brandon Sanderson. Early in my Deep Dive Coding experience, we were talking about ipsum generators. One of my cohorts suggested we code up our own ipsum generators. Thus, Cosmere Ipsum was born. Check out the progress on my GitHub.</p>
                 <button class="w-32 text-[#82DAFF] hover:text-[#015A80] bg-[#7F0116] hover:bg-[#D44960] border-2 border-[#82DAFF] hover:border-[#015A80] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 text-center">
-                    <a href="https://github.com/evanfbolton/cosmere-ipsum">GitHub Repo</a></button>
+                    <a href="https://github.com/evanfbolton/cosmere-ipsum" target="_blank">GitHub Repo</a></button>
             </div>
         </div>
     </div>
