Fixed deployment and colorful.jpg image path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--HERO SECTION START-->
-<section class="flex flex-col justify-center bg-center bg-no-repeat bg-[url('./images/colorful.jpg')] bg-gray-700 bg-blend-overlay h-screen">
+<section class="flex flex-col justify-center bg-center bg-no-repeat bg-[url('/images/colorful.jpg')] bg-gray-700 bg-blend-overlay h-screen">
     <div class="px-8 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
         <h1 class="mb-4 text-5xl font-extrabold tracking-tight leading-none text-[#FFF982] md:text-6xl lg:text-8xl">Hey. I'm Evan.</h1>
         <p class="hidden md:block mb-8 text-xl font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Associate Fullstack Dev | Game Enthusiast | Voracious Book Worm</p>
